# local-library

./: .dockerignore  .gitignore  .stylelintrc.json  README.md  package.json  pnpm-lock.yaml  postcss.config.cjs  pyproject.toml
container-config/: Dockerfile_django  Dockerfile_nginx  Dockerfile_prometheus  Dockerfile_redis  collect_statics.sh  collect_statics_preprod.sh  compose.dev.yaml  compose.preprod.yaml  compose.prod.yaml  compose.yaml  docker_compose.sh  fly.sh  fly_django.toml  fly_nginx.toml  fly_postgres.toml
container-config/git-safe/: .dev.safe.env  .preprod.safe.env  .prod.safe.env
nginx/: cors.conf  map_vars.conf  map_vars.conf.template  nginx.conf  nginx.conf.template  statics.conf  user-media.conf
nginx/statics/: staticfiles.json
prometheus/: prometheus.yaml
